--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -1,28 +1,29 @@
 .slider__image {
-  margin-left: -20px;
-  margin-right: -20px;
   display: none;
+  margin-right: -20px;
+  margin-left: -20px;
 }
 
 .slider__text {
+  display: block;
+  margin-left: 3px;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
-  display: block;
 }
 
 .slider__scale {
-  width: 85px;
-  height: 14px;
-  background-color: $white-color;
-  border-radius: 6px;
-  padding-top: 4px;
-  padding-bottom: 4px;
-  padding-left: 6px;
-  padding-right: 6px;
-  border: 1px solid $border-color-3;
   display: flex;
   align-items: center;
+  width: 85px;
+  height: 14px;
+  padding-top: 4px;
+  padding-right: 6px;
+  padding-bottom: 4px;
+  padding-left: 6px;
+  border: 1px solid $border-color-3;
+  border-radius: 6px;
+  background-color: $white-color;
 }
 
 .slider__bar {
@@ -33,13 +34,13 @@
 }
 
 .slider__controls {
-  margin-top: 32px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 200px;
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
+  width: 200px;
+  margin-top: 32px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .slider__toggle--before:checked ~ .slider__image--before,
